Prevent navbar height from collapsing when empty
* Necessary when there are no navbar_items or navbar_right, for
instance when using Signon’s Sign in screen

--- a/app/assets/stylesheets/govuk_admin_template/navbar.css.scss
+++ b/app/assets/stylesheets/govuk_admin_template/navbar.css.scss
@@ -16,6 +16,12 @@
   }
 }
 
+// Prevent navbar height from collapsing when there's
+// no navbar_right or navbar_items
+header .navbar-header {
+  min-height: 50px;
+}
+
 @media (max-width: 768px) {
   .navbar .container .navbar-brand {
     margin-left: 15px;
